[package]
name = "hmd"
version = "0.1.0"
edition = "2021"
authors = ["@FedorBuggins"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
indexmap = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
